syntax = "proto3";

option java_package = "ru.itis.hr.grpc.protobuf.cv";

service CVService {
  rpc GetCV(CVRequest) returns (CVResponse) {}
}

message CVRequest {
  repeated string skills = 1;
}

message CV {
  string id = 1;
  string Name = 2;
  uint32 Age = 3;
  repeated string skills = 4;
}

message CVResponse {
  repeated CV cvList = 1;
}